--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { 
+  height: 100%;
+ }
 
-
+.main-content {
+    box-sizing: border-box;
+    padding: 20px;
+    max-width: 800px;
+    margin: auto;
+  }
