--- a/src/app/shared/components/comments/comments.component.html
+++ b/src/app/shared/components/comments/comments.component.html
@@ -1,7 +1,16 @@
+<div class="comments-row">
+    <mat-form-field >
+        <input type="text" matInput placeholder="Laissez un commentaire..." [formControl]="commentCtrl">
+    </mat-form-field>
+    <button mat-icon-button color="primary" (click)="onLeaveComment">
+        <mat-icon>send</mat-icon>
+     </button>
+</div>
+
 <mat-list *ngIf="comments.length">
     <h2 matSubheader>Commentaires</h2>
     <mat-list-item *ngFor="let comment of comments">
       <span mat-line>{{ comment.comment }}</span>
       <span mat-line>{{ comment.createDate | date }}</span>
     </mat-list-item>
-  </mat-list>
+ </mat-list>
