--- a/src/app/social-media/components/post-list-item/post-list-item.component.html
+++ b/src/app/social-media/components/post-list-item/post-list-item.component.html
@@ -2,14 +2,16 @@
     <mat-card-header>
       <mat-card-title>
         <span>{{ post.title | titlecase }}</span>
+
       </mat-card-title>
       <mat-card-subtitle>
+        <span>{{ tempUser | username }}</span>
         <span>{{ post.createdDate | date }}</span>
       </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <img mat-card-image *ngIf="post.imageUrl as imageUrl" [src]="imageUrl" [alt]="post.title">
-      <span class="post-content">{{ post.content }}</span>
+      <span class="post-content">{{ post.content | shorten: 35 }}</span>
     </mat-card-content>
     <mat-card-actions>
       <app-comments [comments]="post.comments" (newComment)="onNewComment($event)"></app-comments>
