--- a/src/app/shared/components/comments/comments.component.html
+++ b/src/app/shared/components/comments/comments.component.html
@@ -11,6 +11,6 @@
     <h2 matSubheader>Commentaires</h2>
     <mat-list-item *ngFor="let comment of comments">
       <span mat-line>{{ comment.comment }}</span>
-      <span mat-line>{{ comment.createDate | date }}</span>
+      <span mat-line>{{ comment.createDate | timeAgo}}</span>
     </mat-list-item>
  </mat-list>
