--- a/src/app/social-media/components/post-list-item/post-list-item.component.html
+++ b/src/app/social-media/components/post-list-item/post-list-item.component.html
@@ -1,12 +1,11 @@
 <mat-card>
     <mat-card-header>
       <mat-card-title>
-        <span>{{ post.title | titlecase }}</span>
-
+        <span highlight>{{ post.title | titlecase }}</span>
       </mat-card-title>
       <mat-card-subtitle>
         <span>{{ tempUser | username }}</span>
-        <span>{{ post.createdDate | date }}</span>
+        <span>{{ post.createdDate | timeAgo }}</span>
       </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
