ca fonctionne mais pas toutes les animations

--- a/src/app/shared/components/comments/comments.component.html
+++ b/src/app/shared/components/comments/comments.component.html
@@ -9,11 +9,11 @@
 
 <mat-list *ngIf="comments.length">
     <h2 matSubheader>Commentaires</h2>
-    <mat-list-item *ngFor="let comment of comments"
-    [@listItem]="ListItemAnimationState"
-    (mouseenter)="onListItemMouseEnter()"
-    (mouseleave)="onListItemMouseLeave()">
-      <span mat-line>{{ comment.comment }}</span>
-      <span mat-line>{{ comment.createDate | timeAgo}}</span>
+    <mat-list-item *ngFor="let comment of comments; let i = index"
+    [@listItem]="animationStates[i]"
+    (mouseenter)="onListItemMouseEnter(i)"
+    (mouseleave)="onListItemMouseLeave(i)">
+      <span class="comment-text" mat-line>{{ comment.comment }}</span>
+      <span class="comment-date" mat-line>{{ comment.createDate | timeAgo}}</span>
     </mat-list-item>
  </mat-list>
