--- a/src/app/shared/components/comments/comments.component.scss
+++ b/src/app/shared/components/comments/comments.component.scss
@@ -1,3 +1,13 @@
 mat-list-item{
     border-bottom: thin solid #555;
 }
+
+.comment {
+  display: flex;
+  flex-direction: column;
+}
+
+.comment-date {
+  font-size: 12px;
+  font-style: italic;
+}
