--- a/src/app/social-media/components/post-list-item/post-list-item.component.html
+++ b/src/app/social-media/components/post-list-item/post-list-item.component.html
@@ -4,13 +4,17 @@
         <span highlight color="violet">{{ post.title | titlecase }}</span>
       </mat-card-title>
       <mat-card-subtitle>
-        <span>{{ tempUser | username }}</span>
-        <span>{{ post.createdDate | timeAgo }}</span>
+       <div class="auteur">
+         <span>{{ tempUser | username }}</span>
+         <span class="auteur-date">{{ post.createdDate | timeAgo }}</span>
+       </div>
       </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <img mat-card-image *ngIf="post.imageUrl as imageUrl" [src]="imageUrl" [alt]="post.title">
-      <span class="post-content">{{ post.content | shorten: 35 }}</span>
+     <div class="post">
+       <img mat-card-image *ngIf="post.imageUrl as imageUrl" [src]="imageUrl" [alt]="post.title">
+       <span class="post-content">{{ post.content | shorten: 35 }}</span>
+     </div>
     </mat-card-content>
     <mat-card-actions>
       <app-comments [comments]="post.comments" (newComment)="onNewComment($event)"></app-comments>
