--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -2,5 +2,6 @@
   <span> Yayoux Components</span>
   <ul>
     <li><a routerLink="/social-media">Social Media</a></li>
+    <li><a routerLink="/complex-form">Formulaire</a></li>
   </ul>
 </mat-toolbar>
