--- a/src/app/complex-form/components/complex-form/complex-form.component.html
+++ b/src/app/complex-form/components/complex-form/complex-form.component.html
@@ -9,10 +9,12 @@
       <mat-form-field appearance="fill">
         <mat-label>Prénom</mat-label>
         <input type="text" matInput formControlName="firstName">
+        <mat-error>Ce champ est requis</mat-error>
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Nom</mat-label>
         <input type="text" matInput formControlName="lastName">
+        <mat-error>Ce champ est requis</mat-error>
       </mat-form-field>
     </div>
 
@@ -26,27 +28,30 @@
     </mat-radio-group>
   </mat-card>
 
-  <mat-card class="form-card" [formGroup]="emailForm">
+  <mat-card class="form-card" [formGroup]="emailForm" *ngIf="showEmailCtrl$ | async ">
     <mat-card-subtitle>Email</mat-card-subtitle>
 
     <div class="form-row">
       <mat-form-field appearance="fill">
         <mat-label>Adresse mail</mat-label>
         <input type="text" matInput formControlName="email">
+        <mat-error>{{getFormControlErrorText(emailCtrl)}}</mat-error>
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Confirmer votre adresse mail</mat-label>
         <input type="text" matInput formControlName="confirm">
+        <mat-error>{{getFormControlErrorText(confirmEmailCtrl)}}</mat-error>
       </mat-form-field>
     </div>
-
+    <small class="error-text" *ngIf="showEmailError$ | async">Les deux adresses ne correspondent pas !</small>
   </mat-card>
 
-  <mat-card class="form-card">
+  <mat-card class="form-card" *ngIf="showPhoneCtrl$ | async">
     <mat-card-subtitle>Téléphone</mat-card-subtitle>
     <mat-form-field appearance="fill">
       <mat-label>Numéro de téléphone</mat-label>
       <input type="text" matInput [formControl]="phoneCtrl">
+      <mat-error>{{getFormControlErrorText(phoneCtrl)}}</mat-error>
     </mat-form-field>
   </mat-card>
 
@@ -64,10 +69,13 @@
       <mat-form-field appearance="fill">
         <mat-label>Confirmer votre mot de passe</mat-label>
         <input type="password" matInput formControlName="confirmPassword">
+        <mat-error>Ce champ est requis</mat-error>
       </mat-form-field>
     </div>
+    <small class="error-text" *ngIf="showPasswordError$ | async">Les mots de passe ne correspondent pas !</small>
   </mat-card>
 
-  <mat-card-actions >
-    <button mat-flat-button color="primary" (click)="onSubmitForm()">ENREGISTRER</button>
+  <mat-card-actions *ngIf="mainForm.valid">
+    <button mat-flat-button color="primary" (click)="onSubmitForm()" [disabled]="loading">ENREGISTRER</button>
+    <mat-spinner *ngIf="loading" color="warn" mode="indeterminate"></mat-spinner>
   </mat-card-actions>
